# StatLine

./: .gitignore  CLA.md  HOWTO.md  LICENSE  README.md  TRADEMARK_POLICY.md  mypy-core.ini  mypy-nice.ini  mypy.ini  pyproject.toml
.github/workflows/: ci.yml  publish.yml
legal/: aup.md  privacypolicy.md  tos.md
scripts/: bootstrap_local_admin.py  rename_local_auth_identity.py  repair_local_device.py
shareable/adapter/: eba_players.public.yaml
statline/: .keys.json  __init__.py  cli.py  datasets.py  public.py
statline/core/: calculator.py  scoring.py
statline/core/adapters/: compile.py  hooks.py  loader.py  registry.py  sniff.py  types.py
statline/core/adapters/defs/: demo.yaml  eba_players.yaml  eba_teams.yaml  example.yaml  valorant.yaml
statline/data/stats/EBA_Elevate302/: eba_hybrid_s1_players.csv  eba_hybrid_s1_teams.csv  eba_s1_players.csv  eba_s1_teams.csv
statline/services/: actions.py
statline/slapi/: __main__.py  adapters.py  app.py  auth.py  cache.py  dep.py  errors.py  permissions.py  pydantic.pyi  schemas.py  scoring.py
statline/slapi/storage/: csv.py  sqlite.py
statline/tui/: app.py  catalog.py
statline/utils/: logging.py  paths.py
tests/: test_public_api.py
typings/fastapi/: __init__.pyi  responses.pyi
typings/pydantic/: __init__.pyi
